objects/LAT_CaseComment__c.object
<CustomObject>
    <fields>
        <fullName>LAT_CommentBody__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is  Admin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_ParentID__c</fullName>
        <label>Case</label>
        <referenceTo>LAT_Case__c</referenceTo>
        <relationshipLabel>Comentários da demanda</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>LAT Case Comment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>LAT Case Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Case Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>